# modern_cpp_challenge

./: CMakeLists.txt  Dockerfile  README.md
gtest/: all_tests.cpp
scripts/: build.sh  clean.sh  create_image.sh  run.sh  run_container.sh  test.sh
scripts/common/: init.sh
src/foo/test/: tests.cpp
src/math2/: gcd.cpp  gcd.h
src/math2/test/: gcd_test.cpp
src/math3/: lcm.cpp  lcm.h
src/math3/test/: lcm_test.cpp
src/p02/: p02.cpp
src/p02/test/: test_p02.cpp
src/p03/: p03.cpp
src/p03/test/: test_p03.cpp
src/p04/: p04.cpp  p04.h
src/p04/test/: test_p04.cpp
src/p14/: p14.cpp  p14.h
src/p14/test/: test_p14.cpp
src/p15/: p15.cpp  p15.h
src/p15/test/: test_p15.cpp
src/p17/: p17.h
src/p17/test/: test_p17.cpp
src/p2/: p2.cpp
src/p2/test/: p2_test.cpp  test_p2.cpp
src/p3/test/: p3_test.cpp  test_p3.cpp
src/p4/test/: p4_test.cpp
src/p96/: client.h  server.cpp  server.h  session.cpp  session.h
src/p96/test/: CMakeLists.txt  server_app.cpp
